2021-12-09  Darin Adler  <darin@apple.com>

        Use simpler idioms for std::less and std::greater possible in modern C++
        https://bugs.webkit.org/show_bug.cgi?id=234117

        Reviewed by Anders Carlsson.

        * wtf/ListDump.h:
        (WTF::sortedListDump): Removed unnecessary template arguments to std::less.

2021-12-10  Keith Miller  <keith_miller@apple.com>

        Reduce maximum mmap size for Structure regions to help placate ios
        https://bugs.webkit.org/show_bug.cgi?id=234091

        Reviewed by Saam Barati.

        Use mach_vm_map since that supports memory alignement so we don't have to map 2x desired address space then free then trim.

        * wtf/PlatformHave.h:
        * wtf/posix/OSAllocatorPOSIX.cpp:
        (WTF::OSAllocator::reserveUncommittedAligned):

2021-12-10  Antti Koivisto  <antti@apple.com>

        [CSS Container Queries] Basic @container at-rule parsing support
        https://bugs.webkit.org/show_bug.cgi?id=234135

        Reviewed by Antoine Quint.

        * Scripts/Preferences/WebPreferencesExperimental.yaml:

        Add preference for container queries, disabled by default.

2021-12-09  Alan Bujtas  <zalan@apple.com>

        Enable the CSS Contain property by default
        https://bugs.webkit.org/show_bug.cgi?id=234020
        <rdar://problem/86218835>

        Reviewed by Brent Fulgham.

        * Scripts/Preferences/WebPreferencesExperimental.yaml:

2021-12-09  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed, reverting r286804.

        Breaks internal builds.

        Reverted changeset:

        "Reduce maximum mmap size for Structure regions to help
        placate ios"
        https://bugs.webkit.org/show_bug.cgi?id=234091
        https://commits.webkit.org/r286804

2021-12-09  Alex Christensen  <achristensen@webkit.org>

        Prepare for transition to C++20
        https://bugs.webkit.org/show_bug.cgi?id=234022

        Reviewed by Yusuke Suzuki.
