@@ -1,3 +1,12 @@
+2021-12-10  Sam Sneddon  <gsnedders@apple.com>
+
+        Enable the 'resolution' media query by default
+        https://bugs.webkit.org/show_bug.cgi?id=78087
+
+        Reviewed by Simon Fraser.
+
+        * Scripts/Preferences/WebPreferencesExperimental.yaml:
+
 2021-12-09  Darin Adler  <darin@apple.com>
 
         Use simpler idioms for std::less and std::greater possible in modern C++
